--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -5,5 +5,29 @@
 }
 
 .navbar a:hover {
-    color: rgb(40, 43, 224) !important;
+    color: #0087ca !important;
+}
+
+.header-link {
+    display: inline-block;
+    position: relative;
+    color: #0087ca;
+}
+
+.header-link:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #0087ca;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.header-link:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
